k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skipta
  namespace: skipta
spec:
  type: ClusterIP
  selector: {app: skipta}
  ports:
  - port: 80
    targetPort: 8000
