k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: skipta
  namespace: skipta
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: kube-system
    kind: Gateway
    sectionName: web
  - name: traefik-gateway
    namespace: kube-system
    kind: Gateway
    sectionName: websecure
  hostnames:
  - "skipta.cmdbee.org"
  rules:
  - matches:
    - path: {type: PathPrefix, value: "/"}
    backendRefs:
    - name: skipta
      port: 80
